syntax/tests/parsing/errors/structure/letBindingPatternKeyword.js
let open = 1
let to = 3
